--- a/Dividend events.html
+++ b/Dividend events.html
@@ -27,7 +27,7 @@
         <body>
             <div>
                 <h2> Top dividend events </h2>
-                <p><em> 2023-02-27 15:30:26.055983 </em></p>
+                <p><em> 2023-02-27 15:45:31.990834 </em></p>
                 <h4>Sorted by newest notification<h4><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -68,6 +68,23 @@
     </tr>
     <tr>
       <th>1</th>
+      <td>PJC</td>
+      <td>PJC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
+      <td>2023-02-27</td>
+      <td>2023-03-14</td>
+      <td>1500.0</td>
+      <td>0.0</td>
+      <td>2023-03-13</td>
+      <td>14 days</td>
+      <td>23000.0</td>
+      <td>23.00</td>
+      <td>6521.74</td>
+      <td>-99.90</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PJC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/PJC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>2</th>
       <td>CCI</td>
       <td>CCI - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1210 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -84,7 +101,7 @@
       <td><a href="https://simplize.vn/company/CCI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>STC</td>
       <td>STC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1400 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -101,7 +118,7 @@
       <td><a href="https://simplize.vn/company/STC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>SAS</td>
       <td>SAS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -118,7 +135,7 @@
       <td><a href="https://simplize.vn/company/SAS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>ADP</td>
       <td>ADP - Trả cổ tức Đợt 3 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2023-02-22</td>
@@ -135,7 +152,7 @@
       <td><a href="https://simplize.vn/company/ADP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>EBS</td>
       <td>EBS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 850 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -152,7 +169,7 @@
       <td><a href="https://simplize.vn/company/EBS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>HMR</td>
       <td>HMR - Trả cổ tức Cả năm năm 2021 bằng tiền 1140 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -169,7 +186,7 @@
       <td><a href="https://simplize.vn/company/HMR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>TTC</td>
       <td>TTC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -186,7 +203,7 @@
       <td><a href="https://simplize.vn/company/TTC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>TPB</td>
       <td>TPB - Trả cổ tức Cả năm năm 2021 bằng tiền 2500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -203,7 +220,7 @@
       <td><a href="https://simplize.vn/company/TPB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>ICN</td>
       <td>ICN - Trả cổ tức Đợt 3 năm 2022 bằng tiền 4500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -220,7 +237,7 @@
       <td><a href="https://simplize.vn/company/ICN" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>PBC</td>
       <td>PBC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -237,7 +254,7 @@
       <td><a href="https://simplize.vn/company/PBC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>VDP</td>
       <td>VDP - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2023-02-08</td>
@@ -254,7 +271,7 @@
       <td><a href="https://simplize.vn/company/VDP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>12</th>
+      <th>13</th>
       <td>REE</td>
       <td>REE - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-06</td>
@@ -271,7 +288,7 @@
       <td><a href="https://simplize.vn/company/REE" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>13</th>
+      <th>14</th>
       <td>BDB</td>
       <td>BDB - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-01-31</td>
@@ -288,7 +305,7 @@
       <td><a href="https://simplize.vn/company/BDB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>14</th>
+      <th>15</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -345,6 +362,23 @@
     </tr>
     <tr>
       <th>1</th>
+      <td>PJC</td>
+      <td>PJC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
+      <td>2023-02-27</td>
+      <td>2023-03-14</td>
+      <td>1500.0</td>
+      <td>0.0</td>
+      <td>2023-03-13</td>
+      <td>14 days</td>
+      <td>23000.0</td>
+      <td>23.00</td>
+      <td>6521.74</td>
+      <td>-99.90</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PJC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/PJC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>2</th>
       <td>CCI</td>
       <td>CCI - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1210 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -361,7 +395,7 @@
       <td><a href="https://simplize.vn/company/CCI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>STC</td>
       <td>STC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1400 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -378,7 +412,7 @@
       <td><a href="https://simplize.vn/company/STC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>SAS</td>
       <td>SAS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -395,7 +429,7 @@
       <td><a href="https://simplize.vn/company/SAS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>ADP</td>
       <td>ADP - Trả cổ tức Đợt 3 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2023-02-22</td>
@@ -412,7 +446,7 @@
       <td><a href="https://simplize.vn/company/ADP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>EBS</td>
       <td>EBS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 850 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -429,7 +463,7 @@
       <td><a href="https://simplize.vn/company/EBS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>HMR</td>
       <td>HMR - Trả cổ tức Cả năm năm 2021 bằng tiền 1140 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -446,7 +480,7 @@
       <td><a href="https://simplize.vn/company/HMR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>TTC</td>
       <td>TTC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -463,7 +497,7 @@
       <td><a href="https://simplize.vn/company/TTC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>TPB</td>
       <td>TPB - Trả cổ tức Cả năm năm 2021 bằng tiền 2500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -480,7 +514,7 @@
       <td><a href="https://simplize.vn/company/TPB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>ICN</td>
       <td>ICN - Trả cổ tức Đợt 3 năm 2022 bằng tiền 4500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -497,7 +531,7 @@
       <td><a href="https://simplize.vn/company/ICN" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>PBC</td>
       <td>PBC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -514,7 +548,7 @@
       <td><a href="https://simplize.vn/company/PBC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>VDP</td>
       <td>VDP - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2023-02-08</td>
@@ -531,7 +565,7 @@
       <td><a href="https://simplize.vn/company/VDP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>12</th>
+      <th>13</th>
       <td>REE</td>
       <td>REE - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-06</td>
@@ -548,7 +582,7 @@
       <td><a href="https://simplize.vn/company/REE" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>13</th>
+      <th>14</th>
       <td>BDB</td>
       <td>BDB - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-01-31</td>
@@ -565,7 +599,7 @@
       <td><a href="https://simplize.vn/company/BDB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>14</th>
+      <th>15</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
