--- a/Dividend events.html
+++ b/Dividend events.html
@@ -27,7 +27,7 @@
         <body>
             <div>
                 <h2> Top dividend events </h2>
-                <p><em> 2023-02-28 11:00:32.854617 </em></p>
+                <p><em> 2023-02-28 11:15:27.407692 </em></p>
                 <h4>Sorted by newest notification<h4><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -51,6 +51,23 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>V12</td>
+      <td>V12 - Phát hành cổ phiếu cho cổ đông hiện hữu tỷ lệ 1 : 1 giá 12.000 đồng/cp</td>
+      <td>2023-02-28</td>
+      <td>2023-03-01</td>
+      <td>0.0</td>
+      <td>100.0</td>
+      <td>2023-02-28</td>
+      <td>0 days</td>
+      <td>12000.0</td>
+      <td>12.00</td>
+      <td>0.00</td>
+      <td>-99.90</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=V12" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/V12" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>1</th>
       <td>ONE</td>
       <td>ONE - Trả cổ tức Cả năm năm 2020 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2023-02-27</td>
@@ -67,7 +84,7 @@
       <td><a href="https://simplize.vn/company/ONE" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>1</th>
+      <th>2</th>
       <td>PJC</td>
       <td>PJC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2023-02-27</td>
@@ -84,7 +101,7 @@
       <td><a href="https://simplize.vn/company/PJC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>CCI</td>
       <td>CCI - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1210 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -101,7 +118,7 @@
       <td><a href="https://simplize.vn/company/CCI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>STC</td>
       <td>STC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1400 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -118,7 +135,7 @@
       <td><a href="https://simplize.vn/company/STC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>SAS</td>
       <td>SAS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -135,7 +152,7 @@
       <td><a href="https://simplize.vn/company/SAS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>ADP</td>
       <td>ADP - Trả cổ tức Đợt 3 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2023-02-22</td>
@@ -152,7 +169,7 @@
       <td><a href="https://simplize.vn/company/ADP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>EBS</td>
       <td>EBS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 850 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -169,7 +186,7 @@
       <td><a href="https://simplize.vn/company/EBS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>HMR</td>
       <td>HMR - Trả cổ tức Cả năm năm 2021 bằng tiền 1140 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -186,7 +203,7 @@
       <td><a href="https://simplize.vn/company/HMR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>TTC</td>
       <td>TTC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -203,7 +220,7 @@
       <td><a href="https://simplize.vn/company/TTC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>TPB</td>
       <td>TPB - Trả cổ tức Cả năm năm 2021 bằng tiền 2500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -220,7 +237,7 @@
       <td><a href="https://simplize.vn/company/TPB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>ICN</td>
       <td>ICN - Trả cổ tức Đợt 3 năm 2022 bằng tiền 4500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -237,7 +254,7 @@
       <td><a href="https://simplize.vn/company/ICN" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>VDP</td>
       <td>VDP - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2023-02-08</td>
@@ -254,7 +271,7 @@
       <td><a href="https://simplize.vn/company/VDP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>12</th>
+      <th>13</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -294,6 +311,23 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>V12</td>
+      <td>V12 - Phát hành cổ phiếu cho cổ đông hiện hữu tỷ lệ 1 : 1 giá 12.000 đồng/cp</td>
+      <td>2023-02-28</td>
+      <td>2023-03-01</td>
+      <td>0.0</td>
+      <td>100.0</td>
+      <td>2023-02-28</td>
+      <td>0 days</td>
+      <td>12000.0</td>
+      <td>12.00</td>
+      <td>0.00</td>
+      <td>-99.90</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=V12" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/V12" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>1</th>
       <td>ONE</td>
       <td>ONE - Trả cổ tức Cả năm năm 2020 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2023-02-27</td>
@@ -310,7 +344,7 @@
       <td><a href="https://simplize.vn/company/ONE" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>1</th>
+      <th>2</th>
       <td>PJC</td>
       <td>PJC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2023-02-27</td>
@@ -327,7 +361,7 @@
       <td><a href="https://simplize.vn/company/PJC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>CCI</td>
       <td>CCI - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1210 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -344,7 +378,7 @@
       <td><a href="https://simplize.vn/company/CCI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>STC</td>
       <td>STC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1400 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -361,7 +395,7 @@
       <td><a href="https://simplize.vn/company/STC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>SAS</td>
       <td>SAS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -378,7 +412,7 @@
       <td><a href="https://simplize.vn/company/SAS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>ADP</td>
       <td>ADP - Trả cổ tức Đợt 3 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2023-02-22</td>
@@ -395,7 +429,7 @@
       <td><a href="https://simplize.vn/company/ADP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>EBS</td>
       <td>EBS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 850 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -412,7 +446,7 @@
       <td><a href="https://simplize.vn/company/EBS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>HMR</td>
       <td>HMR - Trả cổ tức Cả năm năm 2021 bằng tiền 1140 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -429,7 +463,7 @@
       <td><a href="https://simplize.vn/company/HMR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>TTC</td>
       <td>TTC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -446,7 +480,7 @@
       <td><a href="https://simplize.vn/company/TTC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>TPB</td>
       <td>TPB - Trả cổ tức Cả năm năm 2021 bằng tiền 2500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -463,7 +497,7 @@
       <td><a href="https://simplize.vn/company/TPB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>ICN</td>
       <td>ICN - Trả cổ tức Đợt 3 năm 2022 bằng tiền 4500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -480,7 +514,7 @@
       <td><a href="https://simplize.vn/company/ICN" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>VDP</td>
       <td>VDP - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2023-02-08</td>
@@ -497,7 +531,7 @@
       <td><a href="https://simplize.vn/company/VDP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>12</th>
+      <th>13</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
